feat: init uikits

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,22 +3,36 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./button": "./src/button.tsx",
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./package.json": "./package.json",
+    "." : {
+      "import": "./dist/index.ts",
+      "require": "./dist/index.cjs"
+    }
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.4",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@storybook/addon-essentials": "^8.5.1",
+    "@storybook/addon-interactions": "^8.5.1",
+    "@storybook/addon-onboarding": "^8.5.1",
+    "@storybook/blocks": "^8.5.1",
+    "@storybook/react": "^8.5.1",
+    "@storybook/react-vite": "^8.5.1",
+    "@storybook/test": "^8.5.1",
     "@turbo/gen": "^2.3.3",
     "@types/node": "^22.10.9",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "storybook": "^8.5.1",
     "typescript": "5.7.3"
   },
   "dependencies": {
