--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
       - checkout
       - node/install-packages:
-          override-ci-command: npm install
+          override-ci-command: pnpm install
       - run:
-          command: npm run build
+          command: pnpm run build
       - run:
           name: Create the ~/artifacts directory if it doesn't exist
           command: mkdir -p ~/artifacts
