--- a/frontend/apps/web/package.json
+++ b/frontend/apps/web/package.json
@@ -11,10 +11,26 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.36.8",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@react-three/drei": "^9.121.3",
+    "@react-three/fiber": "^8.17.12",
     "@repo/ui": "workspace:*",
+    "@tanstack/react-query": "^5.64.2",
+    "@types/three": "^0.172.0",
+    "autoprefixer": "^10.4.20",
+    "lucide": "^0.474.0",
+    "lucide-react": "^0.474.0",
+    "maath": "^0.10.8",
     "next": "^15.1.6",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "tailwindcss": "^3.4.1",
+    "three": "^0.172.0",
+    "viem": "2.x",
+    "wagmi": "^2.14.9"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
