--- a/frontend/apps/web/package.json
+++ b/frontend/apps/web/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.64.2",
     "@types/three": "^0.172.0",
     "autoprefixer": "^10.4.20",
+    "framer-motion": "^12.0.5",
     "lucide": "^0.474.0",
     "lucide-react": "^0.474.0",
     "maath": "^0.10.8",
@@ -27,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "three": "^0.172.0",
     "viem": "2.x",
